# AreaMatrix

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  dev  dev.sh  release-notes-0.1.0.md  task-loop
core/: AGENTS.md  Cargo.toml  area_matrix.udl  build.rs
core/benches/: stage1_hot_paths.rs
core/resources/: classifier.yaml
core/src/: ai_call_log.rs  ai_classification_suggestion.rs  ai_fallback.rs  ai_privacy_rules.rs  ai_settings.rs  ai_summary.rs  ai_tags_suggestion.rs  api.rs  batch_category.rs  batch_delete.rs  batch_rename.rs  classifier_correction.rs  classifier_impact.rs  classifier_rule_editor.rs  classifier_rules.rs  cloud_permission_state.rs  command_index.rs  config.rs  cross_platform_ffi.rs  domain.rs  error.rs  icloud_conflicts.rs  import_conflict_batch.rs  lib.rs  local_model_status.rs  missing_file_recovery.rs  note.rs  platform_capabilities.rs  platform_watcher_status.rs  recovery.rs  redo.rs  remote_provider_config.rs  repair.rs  repo_entries.rs  repo_init.rs  repo_path.rs  repo_scan.rs  search.rs  semantic_search.rs  sync_conflict_detect.rs  (+3 more)
core/tests/: adopt_existing_repo_contract.rs  adopt_existing_repo_implementation.rs  adopt_existing_repo_validation.rs  ai_call_log_contract_api.rs  ai_call_log_failure_recovery.rs  ai_call_log_implementation.rs  ai_call_log_validation.rs  ai_classification_suggestion_contract_api.rs  ai_classification_suggestion_failure_recovery.rs  ai_classification_suggestion_implementation.rs  (+309 more)
(+3674 files in other folders)
